fix underline title color

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ GLM-4, then deployed it as a web app for employee training and documentation cha
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title">Skimeter Smart Snow Goggles</span>
+                  <span class="card-title"><a class="teal-text hoverline">Skimeter Smart Snow Goggles</a></span>
                 </p>
                 <p class="brown-text"> University of Toronto Hatchery </p>
                 <p>
@@ -499,7 +499,7 @@ GLM-4, then deployed it as a web app for employee training and documentation cha
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title">Geographic Information System Project</span>
+                  <span class="card-title"><a class="teal-text hoverline">Geographic Information System Project</a></span>
                 </p>
                 <p class="brown-text"> University of Toronto </p>
                 <p>
