Add Places Travelled Section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
       </li>
 
       <li class="bold">
+        <a aria-label="Navigate to the Places Traveled section" href="#Places Traveled" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-map small"></i><span>Places Traveled</span></a>
+      </li>
+
+      <li class="bold">
         <!--
         ICONS:
         1. mdi-action-description
@@ -190,6 +195,10 @@
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Places Traveled section" href="#Places Traveled" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-map small"></i><span>Places Traveled</span></a>
       </li>
       <!-- <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
@@ -768,6 +777,14 @@ map and created elaborate data structures for easy data retrieval</li>
               class="fa fa-linkedin"></i><a aria-label="Xiaoxiao on LinkedIn" href="https://www.linkedin.com/in/xiaoxiao-zhao/"
               class="hoverline" target="_blank">linkedin.com/in/xiaoxiao-zhao</a></a>
         </p>
+      </div>
+    </section>
+
+    <!-- Nineth Section: Places Traveled-->
+     <section id="Places Traveled" class="section scrollspy">
+      <h3 class="page-title white-text teal">Places Traveled</h3>
+      <div class="container">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=10YtCrRLerFROUEFXhox6iMy0NTpXnSM&ehbc=2E312F" width="640" height="480"></iframe>
       </div>
     </section>
   </main>
