add icon for map

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
   <!-- Font Awesome Icon - CSS-->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+  <!-- Material Design Icons - CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
   <title>Xiaxiao Zhao | Software Developer</title>
@@ -137,7 +139,7 @@
 
       <li class="bold">
         <a aria-label="Navigate to the Places Traveled section" href="#Places Traveled" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-map small"></i><span>Places Traveled</span></a>
+            class="mdi mdi-map small"></i><span>Places Traveled</span></a>
       </li>
 
       <li class="bold">
@@ -198,7 +200,7 @@
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Places Traveled section" href="#Places Traveled" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-map small"></i><span>Places Traveled</span></a>
+            class="mdi mdi-map small"></i><span>Places Traveled</span></a>
       </li>
       <!-- <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
