fix project section id

--- a/index.html
+++ b/index.html
@@ -476,6 +476,7 @@ GLM-4, then deployed it as a web app for employee training and documentation cha
     </section>
 
     <!-- Fourth Section: Projects -->
+    <section id="Projects" class="section scrollspy">
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container">
         <!-- Recent Projects Section -->
